spacing correction

--- a/sass/layout/_flex-group.scss
+++ b/sass/layout/_flex-group.scss
@@ -32,3 +32,6 @@
 .flex-column {
   flex-direction: column;
 }
+.flex-around {
+  justify-content: space-around;
+}
